changed runs api impl
